--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Alkatra&family=Changa+One&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --font-head: "Changa One", cursive;
+  --font-base: "Alkatra", cursive;
+  --color-white: rgb(251, 252, 255);
+  --color-grey: #b7b6bd;
+  --color-black: #282828;
 }
